# openai-whisper

./: LICENSE  README.md  inference_tflite_files.py  input_features_filters.h  minimal.cc  openai_whisper_ASR.ipynb  tflite_from_huggingface_whisper.ipynb  tinynn_openai-whisper-ASR-pytorch_to_tflite_int8.ipynb  tinynn_pytorch_to_tflite_int8.ipynb  youtube_to_subtitles.ipynb
android_app/: .gitattributes  policy.html  privacy
android_app/Whisper-TFLIte-Android-Example/: README.md  local.properties  settings.gradle
android_app/Whisper-TFLIte-Android-Example/app/: build.gradle
android_app/Whisper-TFLIte-Android-Example/app/release/: output-metadata.json
android_app/Whisper-TFLIte-Android-Example/app/src/androidTest/java/com/whisper/android/tflitecpp/: ExampleInstrumentedTest.java
android_app/Whisper-TFLIte-Android-Example/app/src/main/: AndroidManifest.xml
android_app/Whisper-TFLIte-Android-Example/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  whisper.h
android_app/Whisper-TFLIte-Android-Example/app/src/main/java/com/whisper/android/tflitecpp/: MainActivity.java
android_app/Whisper-TFLIte-Android-Example/app/src/main/res/layout/: activity_main.xml
android_app/Whisper-TFLIte-Android-Example/app/src/main/res/mipmap-anydpi-v26/: ic_stop_round.xml  ic_warning.xml
android_app/Whisper-TFLIte-Android-Example/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
android_app/Whisper-TFLIte-Android-Example/app/src/main/res/values-night/: themes.xml
android_app/Whisper-TFLIte-Android-Example/app/src/test/java/com/whisper/android/tflitecpp/: ExampleUnitTest.java
android_app/Whisper-TFLIte-Android-Example/gradle/wrapper/: gradle-wrapper.properties
android_app/debug/: app-debug.apk  output-metadata.json
android_app/release/: app-release.apk  output-metadata.json
models/: .gitattributes  filters_vocab_multilingual.h  whisper-base.tflite  whisper-decoder-tiny.tflite  whisper-encoder-tiny.tflite  whisper-medium.tflite  whisper-small.tflite  whisper-tiny.en.tflite  whisper.tflite
notebooks/: README.md  filters_vocab_gen_util.ipynb  openai_whisper_ASR.ipynb  tflite_from_huggingface_whisper.ipynb  whisper_base_tflite_model.ipynb  whisper_encoder_decoder_tflite.ipynb  whisper_onnxruntime.ipynb  whisper_to_onnx_tflite_int8.ipynb  youtube_to_subtitles.ipynb
scripts/: inference_tflite_files.py
stream/: CMakeLists.txt  README.md  filters_vocab_gen.h  stream.cc
stream_standalone/: CMakeLists.txt  README.md  stream_standalone.cc  whisper.h
tflite_minimal/: minimal.cc  whisper.h
tools/: input_device_signal_analysis.py
